--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,46 +1,93 @@
-.menu-bar {
-   background: linear-gradient(
-      90deg,
-      rgb(250, 109, 0, 0.8),
-      rgb(250, 109, 0, 0.7)
-   );
-   padding: 0.5rem 5rem;
-   height: 8rem;
+.header .container {
    display: flex;
    align-items: center;
+   justify-content: center;
+   background:linear-gradient(rgba(69, 69, 69, 0.479), rgba(16, 16, 16, 0.411)),  url(./../../../public/img/header-background.jpg) no-repeat;
+   height: auto;
+   margin-top: 5rem;
+   background-size: cover;
+   background-attachment: fixed;
+   background-position: center center;
+   border-radius: 1.5rem;
+   -webkit-border-radius: 1.5rem;
+   -moz-border-radius: 1.5rem;
+   -ms-border-radius: 1.5rem;
+   -o-border-radius: 1.5rem;
+   padding: 0rem  2.5rem;
+   font-family: 'Lobster', cursive; 
    text-align: center;
-   justify-content: space-between;
+   
+}
+.header-details h2{
+      font-size: 5rem;
+      color: white;
+      letter-spacing: 0.4rem;
+      
+}
+.header-details h4{
+      font-size: 1.8rem;
+      color: white;
+      letter-spacing: 0.1rem;
+      text-transform: capitalize;      
+}
+.header-details .header-icon{
+      font-size: 3rem;
+      margin: 1rem;
+      color: white;
+      transition: 0.5s all ease;
+      -webkit-transition: 0.5s all ease;
+      -moz-transition: 0.5s all ease;
+      -ms-transition: 0.5s all ease;
+      -o-transition: 0.5s all ease;
+}
+.header-details .header-icon:hover{
+      font-size: 3rem;
+      padding-top: 3rem;
 }
 
-.menu-bar h1 {
-   color: #fff;
-   font-size: 3rem;
-   text-transform: capitalize;
-   font-style: italic;
-   font-family: 'Lobster', cursive;
-   letter-spacing: 0.2rem;
+.header-details{
+   width: 50%;
 }
-.menu-bar .menu{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 2rem;
-      letter-spacing: 0.1rem;
+.header-img{
+   width: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
-.menu-bar .menu a{
-   text-decoration: none;
-   color: white;
-   font-weight: bold;
-   text-transform: capitalize;
-   font-size: 1.8rem;
-   transition: 0.5s all ease;
-   -webkit-transition: 0.5s all ease;
-   -moz-transition: 0.5s all ease;
-   -ms-transition: 0.5s all ease;
-   -o-transition: 0.5s all ease;
+.header-img img{
+   width: 80%;
+   height: auto;
+  
 }
-.menu-bar .menu a:hover{
-      font-size: 1.6rem;
-      color: rgb(0, 0, 0);
-      text-transform: uppercase;
+.header-img:hover img {
+   animation: rotateImg infinite reverse 1s;
+   -webkit-animation: rotateImg infinite reverse 0.8s;
+   transform: rotate(0deg);
+   -webkit-transform: rotate(0deg);
+   -moz-transform: rotate(0deg);
+   -ms-transform: rotate(0deg);
+   -o-transform: rotate(0deg);
+}
+
+@keyframes rotateImg {
+   0%{
+      transform: rotate(-30deg);
+      -webkit-transform: rotate(-30deg);
+      -moz-transform: rotate(-30deg);
+      -ms-transform: rotate(-30deg);
+      -o-transform: rotate(-30deg);
+}50%{
+   transform: rotate(0deg);
+   -webkit-transform: rotate(0deg);
+   -moz-transform: rotate(0deg);
+   -ms-transform: rotate(0deg);
+   -o-transform: rotate(0deg);
+}
+100%{
+   transform: rotate(30deg);
+   -webkit-transform: rotate(30deg);
+   -moz-transform: rotate(30deg);
+   -ms-transform: rotate(30deg);
+   -o-transform: rotate(30deg);
+}
 }
