--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -1,6 +1,7 @@
 .question{
       width: 90%;
       padding: 2rem;
+      padding-top: 3rem;
       height: auto;
       box-shadow:1px 1px 14px rgba(221, 221, 221, 0.802);
       border-radius: 1.5rem;
@@ -10,6 +11,7 @@
       -o-border-radius: 1.5rem;
       color: white;
       background: rgba(5, 5, 5, 0.8);
+      position: relative;
 }
 
 .question h3{
@@ -23,4 +25,40 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 2rem;
+}
+
+.eye-icon{
+      font-size: 2.5rem;
+      position: absolute;
+      right: 2rem;
+      top: 2rem;
+      cursor:pointer;
+}
+
+.correct-answer{
+     background: green;
+     padding: 0.1rem;
+     margin-top: 1rem;
+     border-radius:1.5rem ;
+     -webkit-border-radius:1.5rem ;
+     -moz-border-radius:1.5rem ;
+     -ms-border-radius:1.5rem ;
+     -o-border-radius:1.5rem ;
+     margin: 1rem auto 0rem;
+     min-width: 30rem;
+     display: none;           
+}
+.correct-answer h3{
+      margin: 0rem!important;
+     padding:0.9rem 0.9rem;
+      color: white;
+      letter-spacing: 0.3rem;
+}
+
+.d-block{
+      display: block;
+}
+
+.d-none{
+      display: none;
 }
