--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,4 +3,20 @@
    grid-template-columns: repeat(4, 1fr);
    gap: 2rem;
    margin: 5rem 0;
+   justify-items: center;
+}
+
+@media screen and (min-width: 0px) and (max-width: 578px) {
+   
+   .topics-container{
+      grid-template-columns: repeat(1, 1fr);
+      justify-items: center;
+   }
+}
+@media screen and (min-width: 579px) and (max-width: 920px) {
+   
+   .topics-container{
+      grid-template-columns: repeat(2, 1fr);
+      justify-items: center;
+   }
 }
