--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,8 +1,11 @@
+.main-container {
+}
+
 .menu-bar {
    background: linear-gradient(
       90deg,
-      rgb(250, 109, 0, 0.8),
-      rgb(250, 109, 0, 0.7)
+      rgb(250, 109, 0),
+      rgb(250, 109, 0)
    );
    padding: 0.5rem 5rem;
    height: 8rem;
@@ -10,6 +13,8 @@
    align-items: center;
    text-align: center;
    justify-content: space-between;
+   width: 100%;
+   position: relative;
 }
 
 .menu-bar h1 {
@@ -17,17 +22,22 @@
    font-size: 3rem;
    text-transform: capitalize;
    font-style: italic;
-   font-family: 'Lobster', cursive;
+   font-family: "Lobster", cursive;
    letter-spacing: 0.2rem;
 }
-.menu-bar .menu{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 2rem;
-      letter-spacing: 0.1rem;
+.menu-bar .menu {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 2rem;
+   letter-spacing: 0.1rem;
+   transition: 0.5s all ease;
+   -webkit-transition: 0.5s all ease;
+   -moz-transition: 0.5s all ease;
+   -ms-transition: 0.5s all ease;
+   -o-transition: 0.5s all ease;
 }
-.menu-bar .menu a{
+.menu-bar .menu a {
    text-decoration: none;
    color: white;
    font-weight: bold;
@@ -40,8 +50,39 @@
    -o-transition: 0.5s all ease;
    text-transform: uppercase;
 }
-.menu-bar .menu a:hover{
-      font-size: 1.7rem;
-      color: rgb(0, 0, 0);
-      font-weight: 400;
+.menu-bar .menu a:hover {
+   font-size: 1.7rem;
+   color: rgb(0, 0, 0);
+   font-weight: 400;
+}
+
+.toggle-icon {
+   font-size: 3rem;
+   display: none;
+}
+
+@media screen and (min-width: 0px) and (max-width: 920px) {
+   .menu-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+   }
+
+   .menu {
+      position: absolute;
+      flex-direction: column;
+      width: 100%;
+      background: rgb(250, 109, 0);
+      height: 15rem;
+      left: 0px;
+   }
+   .clickedBefore {
+      top: -99rem;
+   }
+   .clickedAfter {
+      top: 8rem;
+   }
+   .toggle-icon {
+      display: block;
+   }
 }
