--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -62,3 +62,19 @@
 .d-none{
       display: none;
 }
+
+
+@media screen and (min-width: 0px) and (max-width: 578px) {
+   
+      .options-container{
+         grid-template-columns: repeat(1, 1fr);
+         justify-content: start;
+      }
+   }
+
+@media screen and (min-width: 579px) and (max-width: 920px) {
+      
+      .options-container{
+         grid-template-columns: repeat(1, 1fr);
+      }
+   }
